# animatrix

./: .gitignore  README.md  hpg_prop9.json  prop10_output.txt  pyproject.toml
euclid_reasoner/: __init__.py  core.py  demo_prop10.py  demo_prop5.py  demo_prop9.py  dump_space_graph.py  export_demo.py  exporters.py  hpg_model.py  prisms.py  search.py  trace_schema.py  types.py
hpg_viewer/: hpg_prop9.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
hpg_viewer/src/: App.tsx  sampleData.ts  styles.css  types.ts
hpg_viewer/src/components/: ControlsPanel.tsx  Legend.tsx  Sidebar.tsx
hpg_viewer/src/utils/: graph.ts
tests/: test_export_graph.py  test_export_opml.py  test_hpg_model.py  test_prop9.py
